--- a/ThongKe/Views/Shared/_Leftmenu.cshtml
+++ b/ThongKe/Views/Shared/_Leftmenu.cshtml
@@ -6,168 +6,224 @@
 @{
     var user = HttpContextAccessor.HttpContext.Session.Get<Users>("loginUser");
 }
-    <aside class="main-sidebar sidebar-dark-navy elevation-4">
+<aside class="main-sidebar sidebar-dark-navy elevation-4">
 
-        <!-- Brand Logo -->
-        @*<a href="~/lib/index3.html" class="brand-link" style="background-color:#3c8dbc">
-            <img src="~/Images/favicon.png"
-                 alt="Saigontourist"
-                 class="brand-image img-circle elevation-3"
-                 style="opacity: .8">
-            <span class="brand-text font-weight-light"><img src="~/Images/saigontourist.png" /></span>
-        </a>*@
+    <!-- Brand Logo -->
+    @*<a href="~/lib/index3.html" class="brand-link" style="background-color:#3c8dbc">
+    <img src="~/Images/favicon.png"
+    alt="Saigontourist"
+    class="brand-image img-circle elevation-3"
+    style="opacity: .8">
+    <span class="brand-text font-weight-light"><img src="~/Images/saigontourist.png" /></span>
+    </a>*@
 
-        <a href="/" style="background-color:#3c8dbc; display: block; padding-bottom:8px">
-            @*<span class="logo-mini">
-                <img src="~/Images/favicon.png" />
-            </span>*@
-            <span class="logo-lg">
-                <img src="~/Images/logo1.png" class="mypicture" />
-            </span>
-        </a>
+    <a href="/" style="background-color:#3c8dbc; display: block; padding-bottom:8px">
+        @*<span class="logo-mini">
+        <img src="~/Images/favicon.png" />
+        </span>*@
+        <span class="logo-lg">
+            <img src="~/Images/logo1.png" class="mypicture" />
+        </span>
+    </a>
 
 
-        <!-- Sidebar -->
-        <div class="sidebar">
-            <!-- Sidebar user (optional) -->
-            <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                <div class="image">
-                    @*<img src="~/lib/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">*@
-                    <i class="fas fa-user-circle text-green fa-2x"></i>
-                </div>
-                <div class="info">
-                    <a href="#" class="d-block">Online</a>
-                </div>
+    <!-- Sidebar -->
+    <div class="sidebar">
+        <!-- Sidebar user (optional) -->
+        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+            <div class="image">
+                @*<img src="~/lib/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">*@
+                <i class="fas fa-user-circle text-green fa-2x"></i>
             </div>
-
-            <!-- Sidebar Menu -->
-            <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column nav-child-indent" data-widget="treeview" role="menu" data-accordion="false">
-                    <!-- Add icons to the links using the .nav-icon class
-                with font-awesome or any other icon font library -->
-                    @if (user.Nhom == "Admins")
-                    {
-                        <li class="nav-item has-treeview">
-                            <a asp-controller="Users" asp-action="Index" class="nav-link">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
-                                <p>
-                                    Tài khoản
-
-                                </p>
-                            </a>
-
-                        </li>
-                    }
-                    @if (user.Nhom != "KDO")
-                    {
-                        @* Danh muc báo cáo *@
-                        <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
-                                <p>
-                                    Báo cáo Doanh Thu
-                                    <i class="right fas fa-angle-left"></i>
-                                </p>
-                            </a>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="SaleTheoQuay" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Sale theo ngày bán</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="SaleTheoNgayDi" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Sale theo ngày đi tour</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="SaleTheoTuyenThamQuan" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Sale theo tuyến tham quan</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="QuayTheoNgayBan" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Quầy theo ngày bán</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="QuayTheoNgayDi" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Quầy theo ngày đi tour</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="DoanTheoNgayDi" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Đoàn Theo Ngày đi tour</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="TuyentqTheoNgayDi" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Tuyến tham quan theo ngày đi tour</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="TuyentqTheoQuy" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Tuyến tham quan theo quý</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="KhachLeHeThong" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Quầy khách lẽ toàn hệ thống</p>
-                                    </a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="KhachHuy" class="nav-link text-danger">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Thống kê huy đoàn</p>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    }
-
-                    @if (user.Nhom == "KDO" || user.Nhom == "Admins")
-                    {
-                        <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
-                                <p>
-                                    Kinh doanh Online
-                                    <i class="right fas fa-angle-left"></i>
-                                </p>
-                            </a>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="KinhDoanhOnline" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Theo ngày bán</p>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a asp-area="" asp-controller="BaoCao" asp-action="KinhDoanhOnlineNgayDi" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Theo ngày đi</p>
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </li>
-                    }
-
-
-
-                </ul>
-            </nav>
-            <!-- /.sidebar-menu -->
+            <div class="info">
+                <a href="#" class="d-block">Online</a>
+            </div>
         </div>
-        <!-- /.sidebar -->
-    </aside>
+
+        <!-- Sidebar Menu -->
+        <nav class="mt-2">
+            <ul class="nav nav-pills nav-sidebar flex-column nav-child-indent" data-widget="treeview" role="menu" data-accordion="false">
+                <!-- Add icons to the links using the .nav-icon class
+                with font-awesome or any other icon font library -->
+                @if (user.Nhom == "Admins")
+                {
+                    <li class="nav-item has-treeview">
+                        <a asp-controller="Users" asp-action="Index" class="nav-link">
+                            <i class="nav-icon fas fa-tachometer-alt"></i>
+                            <p>
+                                Tài khoản
+
+                            </p>
+                        </a>
+
+                    </li>
+                }
+                @if (user.Nhom != "KDO")
+                {
+                    @* Danh muc báo cáo KL*@
+                    <li class="nav-item has-treeview">
+                        <a href="#" class="nav-link">
+                            <i class="nav-icon fas fa-tachometer-alt"></i>
+                            <p>
+                                Báo cáo Doanh Thu KL
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="SaleTheoQuay" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Sale theo ngày bán</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="SaleTheoNgayDi" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Sale theo ngày đi tour</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="SaleTheoTuyenThamQuan" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Sale theo tuyến tham quan</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="QuayTheoNgayBan" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Quầy theo ngày bán</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="QuayTheoNgayDi" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Quầy theo ngày đi tour</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="DoanTheoNgayDi" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Đoàn Theo Ngày đi tour</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="TuyentqTheoNgayDi" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Tuyến tham quan theo ngày đi tour</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="TuyentqTheoQuy" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Tuyến tham quan theo quý</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="KhachLeHeThong" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Quầy khách lẽ toàn hệ thống</p>
+                                </a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="KhachHuy" class="nav-link text-danger">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Thống kê huy đoàn</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+
+                    @* Danh muc báo cáo KD*@
+                    <li class="nav-item has-treeview">
+                        <a href="#" class="nav-link">
+                            <i class="nav-icon fas fa-tachometer-alt"></i>
+                            <p>
+                                Báo cáo Doanh Thu KD
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a asp-action="DoanhSoTheoSale" asp-controller="BaoCao" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Doanh số theo sale</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-action="DoanhSoTheoThang" asp-controller="BaoCao" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Doanh số theo tháng</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-action="DoanhSoTheoNgayDi" asp-controller="BaoCao" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Doanh số theo ngày đi tour</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-action="DoanhSoTheoThiTruong" asp-controller="BaoCao" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Doanh số theo thị trường</p>
+                                </a>
+                            </li>
+
+                            @* <li class="nav-item">
+                        <a href="../layout/fixed-topnav.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Fixed Navbar</p>
+                        </a>
+                        </li>
+                        <li class="nav-item">
+                        <a href="../layout/fixed-footer.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Fixed Footer</p>
+                        </a>
+                        </li>
+                        <li class="nav-item">
+                        <a href="../layout/collapsed-sidebar.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Collapsed Sidebar</p>
+                        </a>
+                        </li>*@
+                        </ul>
+                    </li>
+                }
+
+                @if (user.Nhom == "KDO" || user.Nhom == "Admins")
+                {
+                    <li class="nav-item has-treeview">
+                        <a href="#" class="nav-link">
+                            <i class="nav-icon fas fa-tachometer-alt"></i>
+                            <p>
+                                Kinh doanh Online
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="KinhDoanhOnline" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Theo ngày bán</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a asp-area="" asp-controller="BaoCao" asp-action="KinhDoanhOnlineNgayDi" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Theo ngày đi</p>
+                                </a>
+                            </li>
+
+                        </ul>
+                    </li>
+                }
+
+
+
+            </ul>
+        </nav>
+        <!-- /.sidebar-menu -->
+    </div>
+    <!-- /.sidebar -->
+</aside>
