--- a/ThongKe/Views/Users/Create.cshtml
+++ b/ThongKe/Views/Users/Create.cshtml
@@ -147,7 +147,7 @@
                             <label asp-for="User.PhongBanQL"></label>
                         </div>
                         <div class="col-4">
-                            <input type="hidden" asp-for="User.PhongBanQL" id="hidDdlPhongBans" />
+                            <input type="hidden" asp-for="User.PhongBanQL" id="hidDdlPhongBanQL" />
                             <select class="phongBans select2-hidden-accessible" multiple="" data-placeholder="Chọn phòng ban" style="width: 100%;" data-select2-id="24" tabindex="-1" aria-hidden="true"
                                     asp-items="@(new SelectList(Model.PhongBans, "Maphong", "Maphong"))" id="ddlPhongBanQL">
                             </select>
@@ -158,8 +158,9 @@
                             <label asp-for="User.DaiLyQL"></label>
                         </div>
                         <div class="col-4">
-                            <select asp-for="User.DaiLyQL" class="form-control border-input "
-                                    asp-items="@(new SelectList(Model.Dmdailies,"Id","Daily"))">
+                            <input type="hidden" asp-for="User.DaiLyQL" id="hidDdlDaiLyQL" />
+                            <select class="daiLyQL select2-hidden-accessible" multiple="" data-placeholder="Chọn đại lý" style="width: 100%;" data-select2-id="23" tabindex="-1" aria-hidden="true"
+                                    asp-items="@(new SelectList(Model.Dmdailies, "Id", "Daily"))" id="ddlDaiLyQL">
                             </select>
                             <span class="text-danger" asp-validation-for="User.DaiLyQL"></span>
                         </div>
@@ -193,11 +194,25 @@
             theme: 'bootstrap4'
         });
 
-        // gan'  qua hidden field
+        // gan'  qua hidden field / phongBanQL
         $('.phongBans').on('change', function () {
             phongBan = $(this).val();
 
-            $('#hidDdlPhongBans').val(phongBan);
+            $('#hidDdlPhongBanQL').val(phongBan);
+
+        });
+
+        // ddlDaiLyQL
+         $('#ddlDaiLyQL').select2({
+
+            theme: 'bootstrap4'
+        });
+
+        // gan'  qua hidden field
+        $('.daiLyQL').on('change', function () {
+            daiLy = $(this).val();
+
+            $('#hidDdlDaiLyQL').val(daiLy);
 
         });
 
