--- a/ThongKe/Views/Users/Edit.cshtml
+++ b/ThongKe/Views/Users/Edit.cshtml
@@ -132,6 +132,32 @@
                             </select>
                             <span class="text-danger" asp-validation-for="User.Nhom"></span>
                         </div>
+                        
+                        <div class="col-2">
+                            <label asp-for="User.DaiLyQL"></label>
+                        </div>
+                        <div class="col-4">
+                            <input type="hidden" asp-for="User.DaiLyQL" id="hidDdlDaiLyQL" />
+                            <select class="daiLyQL select2-hidden-accessible" multiple="" data-placeholder="Chọn đại lý" style="width: 100%;" data-select2-id="23" tabindex="-1" aria-hidden="true"
+                                    asp-items="@(new SelectList(Model.Dmdailies, "Id", "Daily"))" id="ddlDaiLyQL">
+                            </select>
+                            <span class="text-danger" asp-validation-for="User.DaiLyQL"></span>
+                        </div>
+
+                    </div>
+                    
+                    <div class="form-group row">
+
+                        <div class="col-2">
+                            <label asp-for="User.PhongBanQL"></label>
+                        </div>
+                        <div class="col-4">
+                            <input type="hidden" asp-for="User.PhongBanQL" id="hidDdlPhongBanQL" />
+                            <select class="phongBans select2-hidden-accessible" multiple="" data-placeholder="Chọn phòng ban" style="width: 100%;" data-select2-id="24" tabindex="-1" aria-hidden="true"
+                                    asp-items="@(new SelectList(Model.PhongBans, "Maphong", "Maphong"))" id="ddlPhongBanQL">
+                            </select>
+                            <span class="text-danger" asp-validation-for="User.PhongBanQL"></span>
+                        </div>
 
                     </div>
 
@@ -158,5 +184,51 @@
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");
 
     }
+
+    <script>
+        // for phongBanQL edit
+        var selectedValues = new Array();        
+        var phongBanQL = $('#hidDdlPhongBanQL').val();
+        selectedValues = phongBanQL.split(',');
+        $('#ddlPhongBanQL').val(selectedValues);        
+        // for phongBanQL edit
+        debugger
+        // for daiLyQL edit
+        var selectedValuesDaiLy = new Array();        
+        var daiLyQL = $('#hidDdlDaiLyQL').val();
+        selectedValuesDaiLy = daiLyQL.split(',');
+        $('#ddlDaiLyQL').val(selectedValuesDaiLy);        
+        // for phongBanQL edit
+
+
+
+        $('.phongBans').select2({
+
+            theme: 'bootstrap4'
+        });
+
+        // gan'  qua hidden field / phongBanQL
+        $('.phongBans').on('change', function () {
+            phongBan = $(this).val();
+
+            $('#hidDdlPhongBanQL').val(phongBan);
+
+        });
+
+        // ddlDaiLyQL
+         $('#ddlDaiLyQL').select2({
+
+            theme: 'bootstrap4'
+        });
+
+        // gan'  qua hidden field
+        $('.daiLyQL').on('change', function () {
+            daiLy = $(this).val();
+
+            $('#hidDdlDaiLyQL').val(daiLy);
+
+        });
+
+    </script>
 }
 
